--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,55 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700&display=swap" rel="stylesheet">
 </head>
 <body>
+<section id="banner">
+    <div id="bannerContentWrapper">
+        <header id="pageHeader">
+            <div class="header-content">
+                <a href="#" class="logo"><img src="./assets/images/logo.png" alt="logo"></a>
+                <nav class="navigation">
+                    <ul class="main-nav">
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#works">Works</a></li>
+                        <li><a href="#teams">Our team</a></li>
+                        <li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="#download">Download</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <div class="bannerContent">
+            <div class="heading">
+                <h1>Your Favorite One Page Multi Purpose Template</h1>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque
+                nisl consectetur et.</p>
+            <a href="#" class="btn">Find out more</a>
+        </div>
+    </div>
+</section>
 
+<section id="features">
+    <div id="featuresContentWrapper">
+        <div class="">
+            <span class="icon icon-tools"></span>
+            <div class="feature-content">
+                <h5>Easily Customised</h5>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis
+                    ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer id="pageFooter">
+    <div class="footerTop">
+        <div class="container footerContainer">
+            <div class="footerItem"><h5>location</h5></div>
+            <div class="footerItem"><h5>share with love</h5></div>
+            <div class="footerItem"><h5>about activebox</h5></div>
+        </div>
+    </div>
+    <div class="footerBottom"></div>
+</footer>
 </body>
 </html>
