--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ActiveBox</title>
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
           integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -94,7 +95,7 @@
 </section>
 
 <section id="projects">
-    <div id="overlayViewContainer">
+    <div id="overlayViewContainer" class="overlayViewContainer">
     <div class="overlayViewWindow">
         <div id="closeOverlayViewWindow"></div>
         <img src="" class="imgOfProject">
@@ -168,6 +169,17 @@
 
 
     </div>
+</section>
+
+<section id="testimonials" class="sliderContainer">
+        <div class="testimonialImageContainer">
+            <img class="testimonialImage">
+        </div>
+        <blockquote id="sliderBlockquote">
+            <p></p>
+            <cite></cite>
+            <div class="circleBtnContainer"></div>
+        </blockquote>
 </section>
 
 <section id="download">
