added workers section and fixed slider bugs

--- a/src/index.html
+++ b/src/index.html
@@ -163,12 +163,21 @@
     </div>
 </section>
 
+<section id="teams" class="teams">
+    <div class="container teamContainer" id="teamContainer" >
+
+    </div>
+</section>
+
 <section id="testimonials" class="sliderContainer">
         <div class="testimonialImageContainer">
             <img class="testimonialImage">
+
         </div>
         <blockquote id="sliderBlockquote">
-            <p></p>
+            <div class="aboutPerson">
+                <p></p>
+            </div>
             <cite></cite>
             <div class="circleBtnContainer"></div>
         </blockquote>
