added components overlayView and scrollEvent

--- a/src/index.html
+++ b/src/index.html
@@ -96,9 +96,8 @@
 
 <section id="projects">
     <div id="overlayViewContainer" class="overlayViewContainer">
-        <div class="overlayViewWindow">
+        <div class="overlayViewWindow" id="overlayViewWindow">
             <div id="closeOverlayViewWindow"></div>
-            <img src="" class="imgOfProject">
         </div>
     </div>
     <div id="projectsWrapper" class="projectsWrapper">
