--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
 </section>
 
 <section id="teams" class="teams">
-    <div class="container teamContainer" id="teamContainer" >
+    <div class="teamContainer container" id="teamContainer" >
 
     </div>
 </section>
